--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,19 +7,22 @@ environment:
   sdk: '>=2.18.6 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
-  assets: 
+  assets:
     - assets/images/
+    - .env
   fonts:
     - family: mplus1
       fonts:
