--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.0.2
+  intl: ^0.18.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_lints: ^2.0.0
