--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,10 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
+  auto_size_text: ^3.0.0
   bloc: ^8.1.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
