--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   match: ^0.4.1
   provider: ^6.0.5
+  shared_preferences: ^2.0.17
   top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
