--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.0.17
   top_snackbar_flutter: ^3.0.0+1
+  validatorless: ^1.2.3
 
 dev_dependencies:
   build_runner: ^2.3.3
